--- a/GroupCalendarProject/app/src/main/res/layout/activity_main_menu.xml
+++ b/GroupCalendarProject/app/src/main/res/layout/activity_main_menu.xml
@@ -12,14 +12,14 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="38dp"
+        android:layout_marginTop="78dp"
         android:onClick="NextPage"
         android:text="Calendars >"
         android:textSize="32sp"
         tools:layout_editor_absoluteX="133dp"
-        tools:layout_editor_absoluteY="59dp" />
+        tools:layout_editor_absoluteY="59dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
 
     <ImageView
         android:id="@+id/imageView"
@@ -29,4 +29,25 @@
         app:srcCompat="@android:drawable/ic_menu_my_calendar"
         android:layout_alignTop="@+id/textView"
         android:layout_toStartOf="@+id/textView" />
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/imageView"
+        android:layout_alignEnd="@+id/imageView"
+        android:layout_marginBottom="25dp"
+        android:text="Hello:"
+        android:textSize="30sp" />
+
+    <TextView
+        android:id="@+id/txtEmail"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/textView6"
+        android:layout_alignBottom="@+id/textView6"
+        android:layout_centerHorizontal="true"
+        android:text="Email"
+        android:textSize="30sp" />
+
 </android.widget.RelativeLayout>
