--- a/GroupCalendarProject/app/src/main/res/layout/activity_main_menu.xml
+++ b/GroupCalendarProject/app/src/main/res/layout/activity_main_menu.xml
@@ -7,19 +7,19 @@
     tools:context="com.example.huliaaaa.groupcalendarproject.MainMenu">
 
 
-
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="78dp"
         android:onClick="NextPage"
         android:text="Calendars >"
+        android:textAlignment="center"
         android:textSize="32sp"
         tools:layout_editor_absoluteX="133dp"
-        tools:layout_editor_absoluteY="59dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        tools:layout_editor_absoluteY="59dp" />
 
     <ImageView
         android:id="@+id/imageView"
@@ -34,11 +34,13 @@
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/imageView"
-        android:layout_alignEnd="@+id/imageView"
-        android:layout_marginBottom="25dp"
+        android:layout_alignEnd="@+id/textView3"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="14dp"
         android:text="Hello:"
-        android:textSize="30sp" />
+        android:textAlignment="center"
+        android:textSize="30sp"
+        android:visibility="invisible" />
 
     <TextView
         android:id="@+id/txtEmail"
@@ -46,8 +48,70 @@
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/textView6"
         android:layout_alignBottom="@+id/textView6"
-        android:layout_centerHorizontal="true"
+        android:layout_toEndOf="@+id/imageView"
         android:text="Email"
-        android:textSize="30sp" />
+        android:textAlignment="center"
+        android:textSize="30sp"
+        android:visibility="invisible" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textView"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="23dp"
+        android:onClick="NextPageFriends"
+        android:text="Friends >"
+        android:textAlignment="center"
+        android:textSize="32sp" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/imageView"
+        android:layout_alignTop="@+id/textView3"
+        app:srcCompat="@android:drawable/ic_menu_myplaces" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textView3"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="23dp"
+        android:onClick="NextPageThemes"
+        android:text="Themes >"
+        android:textAlignment="center"
+        android:textSize="32sp" />
+
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/textView5"
+        android:layout_alignStart="@+id/imageView2"
+        app:srcCompat="@android:drawable/ic_menu_view" />
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignEnd="@+id/textView5"
+        android:layout_below="@+id/textView5"
+        android:layout_marginTop="24dp"
+        android:onClick="NextPageSetttings"
+        android:text="Settings >"
+        android:textAlignment="center"
+        android:textSize="32sp" />
+
+    <ImageView
+        android:id="@+id/imageView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/imageView3"
+        android:layout_alignTop="@+id/textView7"
+        app:srcCompat="@android:drawable/ic_menu_manage" />
 
 </android.widget.RelativeLayout>
