--- a/GroupCalendarProject/app/src/main/res/layout/activity_calendar_view.xml
+++ b/GroupCalendarProject/app/src/main/res/layout/activity_calendar_view.xml
@@ -13,7 +13,7 @@
     <com.github.sundeepk.compactcalendarview.CompactCalendarView xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/compactcalendar_view"
         android:layout_width="368dp"
-        android:layout_height="238dp"
+        android:layout_height="245dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:visibility="visible"
@@ -55,29 +55,57 @@
         tools:layout_editor_absoluteX="16dp"
         tools:layout_editor_absoluteY="265dp" />
 
+    <ListView
+        android:id="@+id/eventList"
+        android:layout_width="250dp"
+        android:layout_height="match_parent"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/compactcalendar_view"
+        android:layout_marginTop="13dp"
+        android:visibility="invisible" />
+
+    <TextView
+        android:id="@+id/dateExample"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/dateExample2"
+        android:layout_below="@+id/titleTXT"
+        android:layout_toEndOf="@+id/titleTXT"
+        android:text="Ex. May 26 2017"
+        android:visibility="invisible" />
+
+    <TextView
+        android:id="@+id/dateExample2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/dateTXT"
+        android:layout_alignBottom="@+id/dateTXT"
+        android:layout_toEndOf="@+id/dateTXT"
+        android:text="4:30 PM"
+        android:visibility="invisible" />
+
     <EditText
         android:id="@+id/descriptionTXT"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/createEvent"
-        android:layout_below="@+id/createEvent"
-        android:layout_marginTop="22dp"
         android:ems="10"
         android:hint="Event Description"
         android:inputType="textMultiLine"
-        android:visibility="invisible" />
+        android:visibility="invisible"
+        android:layout_below="@+id/dateTXT"
+        android:layout_alignEnd="@+id/createEvent" />
 
     <Button
         android:id="@+id/addBTN"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/dateTXT"
-        android:layout_below="@+id/dateTXT"
-        android:layout_marginEnd="11dp"
-        android:layout_marginTop="17dp"
         android:onClick="onBtnClick3"
         android:text="Add"
-        android:visibility="invisible" />
+        android:visibility="invisible"
+        android:layout_below="@+id/descriptionTXT"
+        android:layout_alignStart="@+id/compactcalendar_view"
+        android:layout_marginStart="13dp" />
 
     <EditText
         android:id="@+id/dateTXT"
@@ -89,16 +117,6 @@
         android:layout_toStartOf="@+id/descriptionTXT"
         android:ems="10"
         android:inputType="textMultiLine"
-        android:visibility="invisible" />
-
-    <ListView
-        android:id="@+id/eventList"
-        android:layout_width="250dp"
-        android:layout_height="match_parent"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/compactcalendar_view"
-        android:layout_marginTop="13dp"
         android:visibility="invisible" />
 
     <TextView
@@ -167,5 +185,15 @@
         android:layout_marginTop="11dp"
         android:text="Edit"
         android:visibility="invisible" />
+
+    <Button
+        android:id="@+id/exit"
+        android:layout_width="45dp"
+        android:layout_height="wrap_content"
+        android:layout_alignEnd="@+id/compactcalendar_view"
+        android:layout_alignParentTop="true"
+        android:text="X"
+        android:visibility="invisible"
+        android:onClick="onExitClick"/>
 
 </android.widget.RelativeLayout>
