--- a/GroupCalendarProject/app/src/main/res/layout/activity_friends_page.xml
+++ b/GroupCalendarProject/app/src/main/res/layout/activity_friends_page.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,5 +7,21 @@
     tools:context="com.example.huliaaaa.groupcalendarproject.FriendsPage">
 
 
+    <ListView
+        android:id="@+id/friendsList"
+        android:layout_width="250dp"
+        android:layout_height="match_parent"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true" />
 
-</android.support.constraint.ConstraintLayout>
+    <Button
+        android:id="@+id/addFriend"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="14dp"
+        android:layout_marginStart="14dp"
+        android:layout_toEndOf="@+id/friendsList"
+        android:elevation="0dp"
+        android:text="Add Friend" />
+</android.widget.RelativeLayout>
