--- a/GroupCalendarProject/app/src/main/res/layout/activity_group_calendars.xml
+++ b/GroupCalendarProject/app/src/main/res/layout/activity_group_calendars.xml
@@ -1,9 +1,83 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.huliaaaa.groupcalendarproject.GroupCalendars">
 
-</android.support.constraint.ConstraintLayout>
+    <ListView
+        android:id="@+id/groupCalendarTitleList"
+        android:layout_width="161dp"
+        android:layout_height="268dp"
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="61dp"
+        android:layout_below="@+id/group"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true" />
+
+    <TextView
+        android:id="@+id/group"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="Group Calendars"
+        android:textSize="24sp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:id="@+id/calendarcreation"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Calendar Creation"
+        android:textAlignment="textStart"
+        android:textSize="24sp"
+        android:layout_below="@+id/groupCalendarTitleList"
+        android:layout_centerHorizontal="true" />
+
+    <EditText
+        android:id="@+id/groupcalendartitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:hint="Title"
+        android:inputType="textPersonName"
+        android:layout_below="@+id/calendarcreation"
+        android:layout_alignParentStart="true" />
+    <Button
+        android:id="@+id/createGroupCalendarBTN"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Create"
+        android:layout_marginEnd="62dp"
+        android:layout_marginBottom="27dp"
+        android:layout_alignParentBottom="true"
+        android:layout_toStartOf="@+id/friendsinCalendarList" />
+
+    <ListView
+        android:id="@+id/friendsinCalendarList"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/calendarcreation"
+        android:layout_alignParentEnd="true"
+        android:layout_toEndOf="@+id/groupcalendartitle" />
+
+    <Button
+        android:id="@+id/addFriendstoCalendarBTN"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/createGroupCalendarBTN"
+        android:layout_alignStart="@+id/createGroupCalendarBTN"
+        android:text="Add People"
+        android:layout_alignEnd="@+id/createGroupCalendarBTN" />
+
+    <Button
+        android:id="@+id/finishBTN"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/createGroupCalendarBTN"
+        android:layout_below="@+id/addFriendstoCalendarBTN"
+        android:text="Finish" />
+
+</android.widget.RelativeLayout>
