--- a/GroupCalendarProject/app/src/main/res/layout/activity_settings_page.xml
+++ b/GroupCalendarProject/app/src/main/res/layout/activity_settings_page.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -13,5 +13,7 @@
         android:layout_height="wrap_content"
         android:text="Sign out"
         tools:layout_editor_absoluteX="146dp"
-        tools:layout_editor_absoluteY="351dp" />
-</android.support.constraint.ConstraintLayout>
+        tools:layout_editor_absoluteY="351dp"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
+</android.widget.RelativeLayout>
