--- a/GroupCalendarProject/app/src/main/res/values/colors.xml
+++ b/GroupCalendarProject/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">@color/primary_text_material_dark</color>
+    <color name="colorPrimaryDark">#303f9f</color>
+    <color name="colorAccent">#5ef8e6</color>
     <color name="white">#FFFFFF</color>
     <color name="red">#f00</color>
     <color name="blue">#009de0</color>
@@ -17,4 +17,9 @@
 
     <color name="background">#E0E0E0</color>
     <color name="grey">#757575</color>
+    <color name="accent_material_dark">#6af7db</color>
+    <color name="primary_text_material_light">#defab1e9</color>
+    <color name="foreground_material_dark">#b93030</color>
+    <color name="secondary_text_material_dark">#b3b66cf4</color>
+    <color name="primary_text_material_dark">?attr/colorAccent</color>
 </resources>
