--- a/GroupCalendarProject/app/src/main/res/layout/activity_create_group_event.xml
+++ b/GroupCalendarProject/app/src/main/res/layout/activity_create_group_event.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.huliaaaa.groupcalendarproject.CreateGroupEvent">
+    tools:context="com.SRJB.huliaaaa.groupcalendarproject.CreateGroupEvent">
 
     <RadioButton
         android:id="@+id/pickdate_btn2"
