--- a/GroupCalendarProject/app/src/main/res/layout/activity_group_calendar_view.xml
+++ b/GroupCalendarProject/app/src/main/res/layout/activity_group_calendar_view.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.huliaaaa.groupcalendarproject.GroupCalendarView">
+    tools:context="com.SRJB.huliaaaa.groupcalendarproject.GroupCalendarView">
 
     <com.github.sundeepk.compactcalendarview.CompactCalendarView xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/compactcalendar_view2"
