--- a/GroupCalendarProject/app/src/main/res/layout/activity_login_page.xml
+++ b/GroupCalendarProject/app/src/main/res/layout/activity_login_page.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.huliaaaa.groupcalendarproject.LoginPage">
+    tools:context="com.SRJB.huliaaaa.groupcalendarproject.LoginPage">
 
     <EditText
         android:id="@+id/txtEmailLogin"
