--- a/GroupCalendarProject/app/src/main/res/layout/activity_main_menu.xml
+++ b/GroupCalendarProject/app/src/main/res/layout/activity_main_menu.xml
@@ -7,15 +7,47 @@
     tools:context="com.SRJB.huliaaaa.groupcalendarproject.MainMenu">
 
 
+    <ImageButton
+        android:id="@+id/imageButton4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/imageButton3"
+        android:layout_alignTop="@+id/textView5"
+        android:elevation="0dp"
+        android:onClick="NextPageSetttings"
+        android:rotation="180"
+        app:srcCompat="?android:attr/homeAsUpIndicator" />
+
+    <ImageButton
+        android:id="@+id/imageButton3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/imageButton2"
+        android:layout_alignTop="@+id/textView3"
+        android:elevation="0dp"
+        android:onClick="NextPageThemes"
+        android:rotation="180"
+        app:srcCompat="?android:attr/homeAsUpIndicator" />
+
+    <ImageButton
+        android:id="@+id/imageButton2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/textView"
+        android:layout_toEndOf="@+id/textView"
+        android:elevation="0dp"
+        android:onClick="NextPage"
+        android:rotation="180"
+        app:srcCompat="?android:attr/homeAsUpIndicator" />
+
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
+        android:layout_below="@+id/textView6"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="78dp"
-        android:onClick="NextPage"
-        android:text="Calendars >"
+        android:layout_marginTop="14dp"
+        android:text="Calendars "
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textSize="32sp"
         tools:layout_editor_absoluteX="133dp"
@@ -25,10 +57,10 @@
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="15dp"
-        app:srcCompat="@android:drawable/ic_menu_my_calendar"
         android:layout_alignTop="@+id/textView"
-        android:layout_toStartOf="@+id/textView" />
+        android:layout_marginEnd="12dp"
+        android:layout_toStartOf="@+id/textView"
+        app:srcCompat="@android:drawable/ic_menu_my_calendar" />
 
     <TextView
         android:id="@+id/textView6"
@@ -61,8 +93,7 @@
         android:layout_below="@+id/textView"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="23dp"
-        android:onClick="NextPageFriends"
-        android:text="Friends >"
+        android:text="Themes"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textSize="32sp" />
 
@@ -81,8 +112,7 @@
         android:layout_below="@+id/textView3"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="23dp"
-        android:onClick="NextPageThemes"
-        android:text="Themes >"
+        android:text="Settings"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textSize="32sp" />
 
@@ -93,25 +123,5 @@
         android:layout_alignBottom="@+id/textView5"
         android:layout_alignStart="@+id/imageView2"
         app:srcCompat="@android:drawable/ic_menu_view" />
-
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/textView5"
-        android:layout_below="@+id/textView5"
-        android:layout_marginTop="24dp"
-        android:onClick="NextPageSetttings"
-        android:text="Settings >"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:textSize="32sp" />
-
-    <ImageView
-        android:id="@+id/imageView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/imageView3"
-        android:layout_alignTop="@+id/textView7"
-        app:srcCompat="@android:drawable/ic_menu_manage" />
 
 </android.widget.RelativeLayout>
