--- a/GroupCalendarProject/app/src/main/res/layout/activity_my_calendars.xml
+++ b/GroupCalendarProject/app/src/main/res/layout/activity_my_calendars.xml
@@ -7,17 +7,15 @@
     tools:context="com.SRJB.huliaaaa.groupcalendarproject.MyCalendars">
 
 
-
     <ListView
         android:id="@+id/calendarTitleList"
-        android:layout_width="161dp"
+        android:layout_width="168dp"
         android:layout_height="268dp"
+        android:layout_marginTop="13dp"
         tools:layout_editor_absoluteX="16dp"
         tools:layout_editor_absoluteY="61dp"
-        android:layout_marginTop="13dp"
         android:layout_below="@+id/textView2"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignStart="@+id/textView4" />
 
     <TextView
         android:id="@+id/textView2"
@@ -65,8 +63,9 @@
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/publicBTN"
         android:layout_toEndOf="@+id/publicBTN"
+        android:onClick="clicka"
         android:text="Private"
-        android:onClick="clicka"/>
+        android:visibility="invisible" />
 
     <Button
         android:id="@+id/createCalendarBTN"
