--- a/GroupCalendarProject/app/src/main/res/layout/activity_themes_page.xml
+++ b/GroupCalendarProject/app/src/main/res/layout/activity_themes_page.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,5 +7,27 @@
     tools:context="com.SRJB.huliaaaa.groupcalendarproject.ThemesPage">
 
 
+    <Button
+        android:id="@+id/lightthemebtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="onLightClick"
+        android:text="Light Theme"
+        tools:layout_editor_absoluteX="161dp"
+        tools:layout_editor_absoluteY="47dp"
+        android:layout_above="@+id/dakrthemebtn"
+        android:layout_alignStart="@+id/dakrthemebtn"
+        android:layout_marginBottom="31dp" />
 
-</android.support.constraint.ConstraintLayout>
+    <Button
+        android:id="@+id/dakrthemebtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="onDarkClick"
+        android:text="Dark Theme"
+        tools:layout_editor_absoluteX="161dp"
+        tools:layout_editor_absoluteY="111dp"
+        android:layout_marginBottom="211dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
+</android.widget.RelativeLayout>
