--- a/GroupCalendarProject/app/src/main/res/values/styles.xml
+++ b/GroupCalendarProject/app/src/main/res/values/styles.xml
@@ -30,4 +30,29 @@
 
     <style name="the" parent="MyTh3me" />
 
+    <style name="TestTheme1" parent="Theme.AppCompat" >
+        <item name="android:colorBackground">@color/lessdarkgrey</item>
+        <item name="colorPrimary">@color/lessblack</item>
+        <item name="android:textColorSecondary">@color/greeniblue</item>
+        <item name="android:textColorSecondaryInverse">@color/greeniboi</item>
+        <item name="android:textColorPrimary">@color/greeniblue</item>
+        <item name="android:textColorPrimaryInverse">@color/greeniboi</item>
+        <item name="colorAccent">@color/asdasdasdasdad</item>
+        <item name="android:statusBarColor">@color/lessblack</item>
+        <item name="android:colorForeground">@color/colorAccent</item>
+        <item name="android:navigationBarColor">@color/lessblack</item>
+        <item name="android:windowAnimationStyle">@style/WindowAnimationTransition</item>
+
+
+    </style>
+
+    <style name="WindowAnimationTransition">
+        <item name="android:windowEnterAnimation">@android:anim/fade_in</item>
+        <item name="android:windowExitAnimation">@android:anim/fade_out</item>
+    </style>
+
+    <style name="poob" parent="Theme.AppCompat.Light" >
+        <item name="colorPrimary">@color/uglee</item>
+    </style>
+
 </resources>
